[package]
name = "diff_json"
version = "0.1.1"
edition = "2021"
authors = ["happyyincyu@gmail.com"]
description = "A powerful JSON diff library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mark-ycy/diff_json"
keywords = ["json", "diff", "compare", "json-diff"]
categories = ["data-structures", "encoding"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "diff_json"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
